# microservice_stuff

./: CMakeLists.txt  randomNumberClient  randomNumberClient.cpp  randomServer.cpp  trueRandomServer.cpp
